--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,6 +6,49 @@
 
   </head>
   <body>
+    <header id="app-header">
+      <div class="header-left">
+        <h1 class="app-title">Security Dashboard</h1>
+        <span class="role-badge">Administrator • IT Security</span>
+      </div>
+      <div class="header-right">
+        <button id="header-sync" class="sync-indicator" aria-haspopup="true" aria-expanded="false">Synced</button>
+        <button id="notify-btn" class="header-btn" aria-haspopup="true" aria-expanded="false">Notifications</button>
+        <button id="avatar-btn" class="avatar" aria-haspopup="true" aria-expanded="false">A</button>
+      </div>
+      <div id="sync-popover" class="popover" style="display: none;">
+        <div class="popover-header">
+          <div class="popover-title">Sync Status</div>
+          <button class="primary small" id="sync-now-top">Sync Now</button>
+        </div>
+        <div class="popover-body">
+          <div class="row"><span>Connected</span></div>
+          <div class="row muted">Last sync: Never</div>
+          <div class="row">
+            <div class="label">Documents Synced</div>
+            <div class="progress"><span style="width:0%"></span></div>
+            <div class="progress-count">0/0</div>
+          </div>
+          <div class="row success">All documents synchronized</div>
+        </div>
+      </div>
+      <div id="notify-popover" class="popover wide" style="display: none;">
+        <div class="popover-header"><div class="popover-title">Notifications</div></div>
+        <div class="popover-body empty">No notifications</div>
+      </div>
+      <div id="account-popover" class="popover" style="display: none;">
+        <div class="popover-body">
+          <div class="acct-name">admin <span class="chip danger">Administrator</span></div>
+          <div class="acct-email">admin@securevault.com</div>
+          <div class="acct-dept">IT Security</div>
+          <div class="divider"></div>
+          <div class="menu-row">Profile</div>
+          <div class="menu-row">Settings</div>
+          <div class="divider"></div>
+          <div class="menu-row danger">Log out</div>
+        </div>
+      </div>
+    </header>
     <aside id="app-sidebar">
       <nav aria-label="Primary">
         <ul class="sidebar-menu">
@@ -20,56 +63,103 @@
     </aside>
     <main id="main-content">
       <section id="dashboard-view" class="app-view">
-        <div class="cards">
-          <div class="card"><div class="card-title">Total Files</div><div class="card-metric" id="dash-total-files">12</div></div>
+        <div class="cards cards-quad">
+          <div class="card">
+            <div class="card-title">Total Documents</div>
+            <div class="card-metric" id="dash-total-files">1,247</div>
+            <div class="stat-subtext">+12% from last month</div>
+          </div>
           <div class="card storage-card">
-            <div class="card-title">Storage</div>
+            <div class="card-title">Encrypted Files</div>
             <div class="donut-wrap">
               <div class="donut-chart" aria-label="Storage used 40%"></div>
             </div>
-            <div class="storage-text"><strong>4.2 GB</strong> of 10 GB used</div>
+            <div class="storage-text"><strong>1,247</strong> 100% secured</div>
           </div>
-          <div class="card sync-card">
-            <div class="card-title">Sync Status</div>
-            <div class="sync-status-line"><span id="sync-status-indicator">Online</span></div>
-            <ul class="sync-queue">
-              <li><span id="files-to-upload">Files to upload: 0</span></li>
-              <li><span id="files-to-download">Files to download: 0</span></li>
-            </ul>
+          <div class="card">
+            <div class="card-title">Active Users</div>
+            <div class="card-metric">89</div>
+            <div class="stat-subtext">Across 12 departments</div>
+          </div>
+          <div class="card">
+            <div class="card-title">Security Score</div>
+            <div class="card-metric">98%</div>
+            <div class="stat-subtext">Excellent security</div>
           </div>
         </div>
         <div class="dashboard-actions">
           <button class="primary" data-view-target="vault-view">Go to My Vault</button>
           <button class="secondary" id="dash-sync-now">Sync Now</button>
+          <button class="primary" id="dash-upload-file">Upload File</button>
         </div>
         <section class="activity">
           <h3>Recent Activity</h3>
-          <ul class="activity-list">
-            <li><a href="#" class="recent-file" data-file="report.pdf">report.pdf (Added)</a></li>
-            <li><a href="#" class="recent-file" data-file="notes.txt">notes.txt (Synced)</a></li>
-            <li><a href="#" class="recent-file" data-file="project_roadmap.pdf">project_roadmap.pdf (Shared)</a></li>
+          <ul class="activity-list activity-rows">
+            <li class="activity-row"><div class="activity-main"><strong>Document uploaded</strong><div class="activity-meta"><a href="#" class="recent-file" data-file="Budget_2025.xlsx">Budget_2025.xlsx</a> by Sarah Chen</div></div><time>5 minutes ago</time></li>
+            <li class="activity-row"><div class="activity-main"><strong>Access granted</strong><div class="activity-meta"><a href="#" class="recent-file" data-file="HR_Policy.pdf">HR_Policy.pdf</a> by Mike Johnson</div></div><time>12 minutes ago</time></li>
           </ul>
         </section>
       </section>
       <section id="vault-view" class="app-view" style="display: none;">
-        <div class="toolbar">
-          <button id="add-file-plus" class="primary">Add File +</button>
-          <input type="text" id="vault-search" placeholder="Search files" />
+        <div class="vault-toolbar">
+          <input type="text" id="doc-search" class="search-input" placeholder="Search documents..." />
+          <button id="filter-btn" class="secondary">Filter</button>
         </div>
-        <table class="file-table">
+        <table class="file-table doc-table">
           <thead>
             <tr>
               <th>Name</th>
-              <th>Last Modified</th>
+              <th>Type</th>
               <th>Size</th>
+              <th>Modified</th>
+              <th>Shared</th>
               <th>Status</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody>
-            <tr><td>financial_report.xlsx</td><td>2025-01-11</td><td>2.1 MB</td><td>Synced</td></tr>
-            <tr><td>client_data.csv</td><td>2025-01-09</td><td>540 KB</td><td>Modified</td></tr>
-            <tr><td>project_roadmap.pdf</td><td>2025-01-05</td><td>1.8 MB</td><td>Conflict</td></tr>
-            <tr><td>notes.txt</td><td>2025-01-03</td><td>4 KB</td><td>Synced</td></tr>
+            <tr>
+              <td>
+                <div class="name-col">
+                  <a href="#" class="recent-file">Financial_Report_Q4_2024.pdf</a>
+                  <div class="meta-line"><span class="badge muted">Encrypted</span></div>
+                </div>
+              </td>
+              <td>PDF</td>
+              <td>2.4 MB</td>
+              <td>2 hours ago</td>
+              <td><span class="chip success">3 users</span></td>
+              <td><span class="badge success">synced</span></td>
+              <td><button class="kebab" aria-label="More">⋮</button></td>
+            </tr>
+            <tr>
+              <td>
+                <div class="name-col">
+                  <a href="#" class="recent-file">Employee_Handbook_v3.docx</a>
+                  <div class="meta-line"><span class="badge muted">Encrypted</span></div>
+                </div>
+              </td>
+              <td>DOCX</td>
+              <td>1.8 MB</td>
+              <td>1 day ago</td>
+              <td><span class="chip success">12 users</span></td>
+              <td><span class="badge success">synced</span></td>
+              <td><button class="kebab" aria-label="More">⋮</button></td>
+            </tr>
+            <tr>
+              <td>
+                <div class="name-col">
+                  <a href="#" class="recent-file">Security_Audit_2024.xlsx</a>
+                  <div class="meta-line"><span class="badge muted">Encrypted</span></div>
+                </div>
+              </td>
+              <td>XLSX</td>
+              <td>856 KB</td>
+              <td>3 days ago</td>
+              <td><span class="chip success">2 users</span></td>
+              <td><span class="badge">offline</span></td>
+              <td><button class="kebab" aria-label="More">⋮</button></td>
+            </tr>
           </tbody>
         </table>
       </section>
@@ -82,6 +172,11 @@
       <section id="settings-view" class="app-view" style="display: none;">
         <p class="placeholder">Admin settings go here.</p>
       </section>
+      <footer id="app-footer" class="status-bar">
+        <div class="status-left"><span class="status-pill online">Online</span></div>
+        <div class="status-center"><div class="status-progress"><span style="width:0%"></span></div><span class="status-bytes">0 B</span></div>
+        <div class="status-right"><button class="secondary" id="footer-sync">Sync Now</button></div>
+      </footer>
     </main>
 
     <!-- Add File Modal -->
