--- a/Client/src/renderer/index.html
+++ b/Client/src/renderer/index.html
@@ -47,6 +47,42 @@
           <button id="login-button" class="primary">Login</button>
         </div>
         <div id="login-error" class="error-message"></div>
+        <div class="auth-links">
+          <a href="#" id="show-register-link" class="auth-link">Create account</a>
+          <a href="#" class="auth-link">Forgot your password?</a>
+        </div>
+      </form>
+    </section>
+
+    <!-- Registration View (hidden by default) -->
+    <section id="register-view" style="display: none;">
+      <form id="register-form" onsubmit="return false;">
+        <div class="login-brand">
+          <strong>Secure Data Vault</strong>
+        </div>
+        <h1>Create Account</h1>
+        <div class="form-field">
+          <label for="reg-username">Username</label>
+          <input id="reg-username" type="text" autocomplete="username" />
+        </div>
+        <div class="form-field">
+          <label for="reg-password">Password</label>
+          <input id="reg-password" type="password" autocomplete="new-password" />
+        </div>
+        <div class="form-field">
+          <label for="reg-role">Role</label>
+          <select id="reg-role">
+            <option value="user">User</option>
+            <option value="admin">Administrator</option>
+          </select>
+        </div>
+        <div class="form-actions">
+          <button id="register-button" class="primary">Create Account</button>
+        </div>
+        <div id="register-error" class="error-message"></div>
+        <div class="auth-links">
+          <a href="#" id="show-login-link" class="auth-link">Already have an account? Sign in</a>
+        </div>
       </form>
     </section>
 
@@ -166,7 +202,18 @@
             <tbody>
               <tr>
                 <td>
-                  <div class="name-col">
+              <div id="app"></div>
+              <!-- Password Modal for Download -->
+              <div id="password-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:1000; align-items:center; justify-content:center;">
+                <div style="background:#fff; padding:2em; border-radius:8px; min-width:300px; box-shadow:0 2px 10px #0003; display:flex; flex-direction:column; gap:1em; align-items:stretch;">
+                  <h3>Enter Password</h3>
+                  <input type="password" id="password-input" placeholder="Password" style="padding:0.5em; font-size:1em;" />
+                  <div style="display:flex; gap:1em; justify-content:flex-end;">
+                    <button id="password-cancel">Cancel</button>
+                    <button id="password-submit">OK</button>
+                  </div>
+                </div>
+              </div>
                     <a href="#" class="recent-file">Financial_Report_Q4_2024.pdf</a>
                     <div class="meta-line"><span class="badge muted">Encrypted</span></div>
                   </div>
